[package]
name = "haksh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "14.0.0"
nom = "7.1.3"
nom-regex = "0.2.0"
regex = "1.10.3"
nom-recursive = "0.5.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
reqwest = {  version = "0.12.1", features=["blocking"] }
